architecture-ide/tests/fixtures/negative/C1_state_references_other_concept.concept
concept Basket

  purpose
    hold user items

  state
    owner: User

  actions
    add [ item: string ] => [ basket: Basket ]

  operational principle
    after add [ item: "apple" ] => [ basket: b ]
